Added active classes to menu items

--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -102,6 +102,10 @@
       animation: poneSubMenuFadeInUp 200ms ease-in-out;
     }
   }
+
+  li.current-menu-item > a {
+    @apply text-primary font-semibold;
+  }
 }
 
 @keyframes poneSubMenuFadeInUp {
