Added development header + lang supports

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /*
-Theme Name: Pixel One maatwerk thema
-Theme URI: https://pixelone.nl
-Description: Pixel One maatwerk thema
-Author: Pixel One
-Requires at least: 5.4
-Tested up to: 6.0.0
-Requires PHP: 8.0
-Version: 1.0.0
+  Theme Name: Pixel One maatwerk thema
+  Theme URI: https://pixelone.nl
+  Description: Pixel One maatwerk thema
+  Author: Pixel One
+  Requires at least: 5.4
+  Tested up to: 6.0.0
+  Requires PHP: 8.0
+  Version: 1.0.0
+  Author URI: https://pixelone.nl
+  Text Domain: pixelone
 */
