--- a/assets/scss/woocommerce.scss
+++ b/assets/scss/woocommerce.scss
@@ -144,4 +144,52 @@
       }
     }
   }
+
+  table.table-auto {
+    @apply w-full;
+
+    thead {
+      @apply bg-gray-100;
+
+      th {
+        @apply text-left text-sm font-bold text-gray-900 py-2 px-4;
+
+        &:first-child {
+          @apply rounded-tl-lg;
+        }
+
+        &:last-child {
+          @apply rounded-tr-lg;
+        }
+      }
+    }
+
+    tbody {
+      tr {
+        td {
+          @apply py-2 px-2;
+        }
+
+        &:nth-child(even) {
+          @apply bg-gray-100;
+        }
+
+        &:last-child {
+          td {
+            &:first-child {
+              @apply rounded-bl-lg;
+            }
+
+            &:last-child {
+              @apply rounded-br-lg;
+            }
+          }
+        }
+
+        &:hover {
+          @apply bg-gray-200;
+        }
+      }
+    }
+  }
 }
